--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - name: Setup
+      uses: actions/checkout@v2
     - name: Install SSH key
       uses: shimataro/ssh-key-action@v2
       with:
@@ -16,5 +17,11 @@ jobs:
         name: miyama
         known_hosts: ${{ secrets.KNOWN_HOSTS }}
         config: ${{ secrets.CONFIG }}
+    - name: Build
+      uses: actions/setup-node@v1
+        with:
+          node-version: 14
+      - run: "yarn install"
+      - run: "yarn run build:production"
     - name: Restart kmc-reacji
       run: bash deploy.sh
