--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,10 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Setup
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
 
       - name: Install SSH key
-      - uses: shimataro/ssh-key-action@v2
+        uses: shimataro/ssh-key-action@v2
         with:
           key: ${{ secrets.SSH_KEY }}
           name: miyama
@@ -20,11 +20,11 @@ jobs:
           config: ${{ secrets.CONFIG }}
 
       - name: Build
-      - uses: actions/setup-node@v1
+        uses: actions/setup-node@v1
         with:
           node-version: 14
-      - run: "yarn install"
-      - run: "yarn run build:production"
+        run: "yarn install"
+        run: "yarn run build:production"
 
       - name: Restart kmc-reacji
-      - run: bash deploy.sh
+        run: bash deploy.sh
