--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 14
-      - run: "echo '$${{ secrets.TOKEN }}' > ./src/token.ts"
+      - run: "echo '${{ secrets.TOKEN }}' > ./src/token.ts"
       - name: Install
         run: "yarn install"
       - name: Build
