--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.25.3",
     "express": "^4.17.3",
+    "form-data": "^4.0.0",
     "husky": "^7.0.4",
     "prettier": "^2.6.2",
     "ts-loader": "^9.2.8",
